<resources>
    <string name="app_name">UnileverApp</string>


    <string name="forgot_title">Lupa Kata sandi</string>
    <string name="forgot_password">Lupa login?</string>
    <string name="click_here">klik disini</string>
    <string name="not_member">Belum terdaftar?</string>
    <string name="join_today">daftar sekarang</string>
    <string name="username">Username</string>
    <string name="password">Password</string>
    <string name="login_now">Masuk</string>
    <string name="send">Kirim</string>
    <string name="save">Simpan</string>
    <string name="change_image">Ubah Foto</string>
    <string name="register_now">Daftar Sekarang</string>
    <string name="continue_order">Konfirmasi Pesanan</string>
    <string name="add_to_chart">Add to Chart</string>
    <string name="buy">Beli</string>
    <string name="remove_from_chart">Remove from Chart</string>
    <string name="title_activity_main">MainActivity</string>
    <string name="special_offers">Special Offers</string>
    <string name="move_to_wish">Move to Wishlist</string>
    <string name="shopping_total">Total Pembelian </string>
    <string name="register">Daftar </string>
    <string name="name">Nama Outlet </string>
    <string name="contact">Kontak Outlet </string>
    <string name="address">Alamat Outlet </string>
    <string name="city">Kota </string>
    <string name="phone">No. Telepon Outlet </string>
    <string name="email">Email Outlet </string>
    <string name="new_password">Password Baru</string>
    <string name="npwp">NPWP </string>
    <string name="nik">NIK </string>
    <string name="npwp_address">Alamat NPWP </string>
    <string name="term_of_payment">Outlet Term of Payment </string>
    <string name="confirm_password">Konfirmasi Password </string>
    <string name="alert_empty_password">Password salah! </string>
    <string name="alert_new_password_rq">Password baru harus di isi! </string>
    <string name="alert_confirm_pwd">Konfirmasi Password baru salah! </string>

    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>
    <string name="lets_order_now">Pesan Sekarang ! </string>
    <string name="empty_invoice">Tidak ada tagihan </string>
    <string name="invoice">Tagihan</string>
    <string name="invoice_no">No. Tagihan</string>
    <string name="invoice_date">Tgl. Tagihan</string>
    <string name="due_date">Batas pemabayaran</string>
    <string name="edit">Edit</string>
    <string name="change_password">Ubah Password</string>
    <string name="sign_out">Keluar</string>
    <string name="close">Selesai</string>
    <string name="close_2">Tutup</string>
    <string name="order_now">Pesan Sekarang</string>
    <string name="price">Harga</string>
    <string name="subtotal">Subtotal</string>
    <string name="quantity">Jumlah</string>
    <string name="brand">Merek</string>
    <string name="category">Kategori</string>
    <string name="description">Description</string>
    <string name="payment_method">Pembayaran</string>
    <string name="chose_payment_method">Pilih Pembayaran</string>
    <string name="detail_order">Rincian Pembelian</string>
    <string name="total_payment">Total Pembayaran</string>
    <string name="total_price">Total Pembelian</string>
    <string name="total_ullage">Diskon</string>
    <string name="pay_now">Proses Pesanan</string>
    <string name="product">Produk</string>
    <string name="delete">Hapus</string>
    <string name="cart">Keranjang</string>
    <string name="please_chose_payment">Please chose Payment Method !</string>
    <string name="todo">TODO</string>
    <string name="note">Keterangan</string>
    <string name="cod">Bayar ditempat</string>
    <string name="credit_card">Kartu Kredit</string>
    <string name="write_note_here">Keterangan pemesanan...</string>
    <string name="order_no">No Pesanan</string>
    <string name="order">Pesanan</string>
    <string name="order_date">Tgl. Pesanan</string>
    <string name="expired_date">Batas Pembayaran</string>
    <string name="credit_limit">Batas Kredit</string>
    <string name="order_buy">Pesanan Pembelian</string>
    <string name="profile">Profil</string>
    <string name="home">Home</string>
    <string name="sort">Urutkan</string>
    <string name="search_product">Cari Produk</string>
    <string name="cash_payment">Pembayaran Tunai</string>
    <string name="file_image_maximum">Maksimal Ukuran gambar (2MB) !</string>
</resources>
