<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".UpdateProfileActivity">


    <include
        android:id="@+id/incl_header"
        layout="@layout/header_cart"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content" />

    <ScrollView
        android:layout_below="@+id/incl_header"
        android:id="@+id/scvw_body_00"
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center_horizontal"
            android:padding="@dimen/size_10dp"
            android:orientation="vertical">


            <EditText
                android:id="@+id/edtx_contact_00"
                android:textSize="@dimen/size_14sp"
                android:background="@drawable/editext_custom_03"
                android:padding="@dimen/size_5dp"
                android:layout_width="match_parent"
                android:layout_height="@dimen/size_50dp"
                android:inputType="textPersonName"
                android:layout_marginTop="@dimen/size_5dp"
                android:layout_marginBottom="@dimen/size_10dp"
                android:hint="@string/contact" />

            <EditText
                android:id="@+id/edtx_address_00"
                android:textSize="@dimen/size_14sp"
                android:background="@drawable/editext_custom_03"
                android:padding="@dimen/size_5dp"
                android:layout_width="match_parent"
                android:layout_height="@dimen/size_80dp"
                android:inputType="textMultiLine"
                android:maxLines="5"
                android:gravity="top"
                android:layout_marginTop="@dimen/size_5dp"
                android:layout_marginBottom="@dimen/size_10dp"
                android:hint="@string/address" />

            <EditText
                android:id="@+id/edtx_city_00"
                android:textSize="@dimen/size_14sp"
                android:background="@drawable/editext_custom_03"
                android:padding="@dimen/size_5dp"
                android:layout_width="match_parent"
                android:layout_height="@dimen/size_50dp"
                android:inputType="textPersonName"
                android:layout_marginTop="@dimen/size_5dp"
                android:layout_marginBottom="@dimen/size_10dp"
                android:hint="@string/city" />

            <EditText
                android:id="@+id/edtx_phone_00"
                android:textSize="@dimen/size_14sp"
                android:background="@drawable/editext_custom_03"
                android:padding="@dimen/size_5dp"
                android:layout_width="match_parent"
                android:layout_height="@dimen/size_50dp"
                android:inputType="phone"
                android:layout_marginTop="@dimen/size_5dp"
                android:layout_marginBottom="@dimen/size_10dp"
                android:hint="@string/phone" />

            <EditText
                android:id="@+id/edtx_email_00"
                android:textSize="@dimen/size_14sp"
                android:background="@drawable/editext_custom_03"
                android:padding="@dimen/size_5dp"
                android:layout_width="match_parent"
                android:layout_height="@dimen/size_50dp"
                android:inputType="textEmailAddress"
                android:layout_marginTop="@dimen/size_5dp"
                android:layout_marginBottom="@dimen/size_10dp"
                android:hint="@string/email" />

            <EditText
                android:id="@+id/edtx_term_00"
                android:visibility="gone"
                android:textSize="@dimen/size_14sp"
                android:background="@drawable/editext_custom_03"
                android:padding="@dimen/size_5dp"
                android:layout_width="match_parent"
                android:layout_height="@dimen/size_50dp"
                android:inputType="number"
                android:text="7"
                android:layout_marginTop="@dimen/size_5dp"
                android:layout_marginBottom="@dimen/size_10dp"
                android:hint="@string/term_of_payment" />

            <EditText
                android:id="@+id/edtx_npwp_00"
                android:textSize="@dimen/size_14sp"
                android:background="@drawable/editext_custom_03"
                android:padding="@dimen/size_5dp"
                android:layout_width="match_parent"
                android:layout_height="@dimen/size_50dp"
                android:inputType="number"
                android:maxLength="30"
                android:layout_marginTop="@dimen/size_5dp"
                android:layout_marginBottom="@dimen/size_10dp"
                android:hint="@string/npwp" />


            <EditText
                android:id="@+id/edtx_npwp_address_00"
                android:textSize="@dimen/size_14sp"
                android:background="@drawable/editext_custom_03"
                android:padding="@dimen/size_5dp"
                android:layout_width="match_parent"
                android:layout_height="@dimen/size_80dp"
                android:inputType="textMultiLine"
                android:maxLines="5"
                android:gravity="top"
                android:layout_marginTop="@dimen/size_5dp"
                android:layout_marginBottom="@dimen/size_10dp"
                android:hint="@string/npwp_address" />

            <EditText
                android:id="@+id/edtx_nik_00"
                android:textSize="@dimen/size_14sp"
                android:background="@drawable/editext_custom_03"
                android:padding="@dimen/size_5dp"
                android:layout_width="match_parent"
                android:layout_height="@dimen/size_50dp"
                android:inputType="number"
                android:maxLength="30"
                android:layout_marginTop="@dimen/size_5dp"
                android:layout_marginBottom="@dimen/size_10dp"
                android:hint="@string/nik" />


            <Button
                android:id="@+id/bbtn_action_00"
                android:textColor="@color/white_00"
                android:layout_marginTop="@dimen/size_30dp"
                android:background="@drawable/button_signin"
                android:layout_width="match_parent"
                android:textSize="@dimen/size_16sp"
                android:layout_height="@dimen/size_50dp"
                android:text="@string/save" />


        </LinearLayout>
    </ScrollView>

</RelativeLayout>