<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/register_backg_00"
    tools:context=".RegisterActivity">

    <RelativeLayout
        android:id="@+id/rvly_header_00"
        android:layout_alignParentTop="true"
        android:background="@color/colorPrimary"
        android:layout_width="match_parent"
        android:gravity="center_vertical"
        android:padding="@dimen/size_10dp"
        android:layout_height="wrap_content">

        <ImageView
            android:id="@+id/imvw_back_00"
            android:src="@drawable/ic_arrow_back"
            android:layout_alignParentLeft="true"
            android:layout_width="wrap_content"
            android:layout_height="@dimen/size_30dp" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerVertical="true"
            android:layout_marginLeft="@dimen/size_10dp"
            android:layout_toEndOf="@+id/imvw_back_00"
            android:fontFamily="sans-serif"
            android:text="@string/register"
            android:textColor="@color/white"
            android:textSize="@dimen/size_22sp" />
    </RelativeLayout>

    <ScrollView
        android:layout_below="@+id/rvly_header_00"
        android:id="@+id/scvw_body_00"
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center_horizontal"
            android:padding="@dimen/size_10dp"
            android:orientation="vertical">

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:padding="@dimen/size_2dp"
                android:layout_marginTop="@dimen/size_5dp"
                android:layout_marginBottom="@dimen/size_10dp"
                android:background="@drawable/background_oval_grey"
                android:orientation="horizontal">

                <de.hdodenhof.circleimageview.CircleImageView
                    android:id="@+id/imvw_profile_00"
                    android:layout_width="@dimen/size_100dp"
                    android:layout_height="@dimen/size_100dp"
                    android:layout_weight="1"
                    android:src="@drawable/ic_add_a_photo"
                    app:civ_border_color="@color/text_blue"
                    app:civ_border_width="0dp" />
            </LinearLayout>

            <EditText
                android:id="@+id/edtx_name_00"
                android:textSize="@dimen/size_14sp"
                android:background="@drawable/editext_custom_03"
                android:padding="@dimen/size_5dp"
                android:layout_width="match_parent"
                android:layout_height="@dimen/size_50dp"
                android:inputType="textPersonName"
                android:layout_marginTop="@dimen/size_5dp"
                android:layout_marginBottom="@dimen/size_10dp"
                android:hint="@string/name" />

            <EditText
                android:id="@+id/edtx_contact_00"
                android:textSize="@dimen/size_14sp"
                android:background="@drawable/editext_custom_03"
                android:padding="@dimen/size_5dp"
                android:layout_width="match_parent"
                android:layout_height="@dimen/size_50dp"
                android:inputType="textPersonName"
                android:layout_marginTop="@dimen/size_5dp"
                android:layout_marginBottom="@dimen/size_10dp"
                android:hint="@string/contact" />

            <EditText
                android:id="@+id/edtx_address_00"
                android:textSize="@dimen/size_14sp"
                android:background="@drawable/editext_custom_03"
                android:padding="@dimen/size_5dp"
                android:layout_width="match_parent"
                android:layout_height="@dimen/size_80dp"
                android:inputType="textMultiLine"
                android:maxLines="5"
                android:gravity="top"
                android:layout_marginTop="@dimen/size_5dp"
                android:layout_marginBottom="@dimen/size_10dp"
                android:hint="@string/address" />

            <EditText
                android:id="@+id/edtx_city_00"
                android:textSize="@dimen/size_14sp"
                android:background="@drawable/editext_custom_03"
                android:padding="@dimen/size_5dp"
                android:layout_width="match_parent"
                android:layout_height="@dimen/size_50dp"
                android:inputType="textPersonName"
                android:layout_marginTop="@dimen/size_5dp"
                android:layout_marginBottom="@dimen/size_10dp"
                android:hint="@string/city" />

            <EditText
                android:id="@+id/edtx_phone_00"
                android:textSize="@dimen/size_14sp"
                android:background="@drawable/editext_custom_03"
                android:padding="@dimen/size_5dp"
                android:layout_width="match_parent"
                android:layout_height="@dimen/size_50dp"
                android:inputType="phone"
                android:layout_marginTop="@dimen/size_5dp"
                android:layout_marginBottom="@dimen/size_10dp"
                android:hint="@string/phone" />

            <EditText
                android:id="@+id/edtx_email_00"
                android:textSize="@dimen/size_14sp"
                android:background="@drawable/editext_custom_03"
                android:padding="@dimen/size_5dp"
                android:layout_width="match_parent"
                android:layout_height="@dimen/size_50dp"
                android:inputType="textEmailAddress"
                android:layout_marginTop="@dimen/size_5dp"
                android:layout_marginBottom="@dimen/size_10dp"
                android:hint="@string/email" />

            <EditText
                android:id="@+id/edtx_term_00"
                android:visibility="gone"
                android:textSize="@dimen/size_14sp"
                android:background="@drawable/editext_custom_03"
                android:padding="@dimen/size_5dp"
                android:layout_width="match_parent"
                android:layout_height="@dimen/size_50dp"
                android:inputType="number"
                android:text="7"
                android:layout_marginTop="@dimen/size_5dp"
                android:layout_marginBottom="@dimen/size_10dp"
                android:hint="@string/term_of_payment" />

            <EditText
                android:id="@+id/edtx_npwp_00"
                android:textSize="@dimen/size_14sp"
                android:background="@drawable/editext_custom_03"
                android:padding="@dimen/size_5dp"
                android:layout_width="match_parent"
                android:layout_height="@dimen/size_50dp"
                android:inputType="number"
                android:maxLength="30"
                android:layout_marginTop="@dimen/size_5dp"
                android:layout_marginBottom="@dimen/size_10dp"
                android:hint="@string/npwp" />


            <EditText
                android:id="@+id/edtx_npwp_address_00"
                android:textSize="@dimen/size_14sp"
                android:background="@drawable/editext_custom_03"
                android:padding="@dimen/size_5dp"
                android:layout_width="match_parent"
                android:layout_height="@dimen/size_80dp"
                android:inputType="textMultiLine"
                android:maxLines="5"
                android:gravity="top"
                android:layout_marginTop="@dimen/size_5dp"
                android:layout_marginBottom="@dimen/size_10dp"
                android:hint="@string/npwp_address" />

            <EditText
                android:id="@+id/edtx_nik_00"
                android:textSize="@dimen/size_14sp"
                android:background="@drawable/editext_custom_03"
                android:padding="@dimen/size_5dp"
                android:layout_width="match_parent"
                android:layout_height="@dimen/size_50dp"
                android:inputType="number"
                android:maxLength="30"
                android:layout_marginTop="@dimen/size_5dp"
                android:layout_marginBottom="@dimen/size_10dp"
                android:hint="@string/nik" />

            <RelativeLayout
                android:background="@color/colorPrimary"
                android:layout_width="match_parent"
                android:layout_marginTop="@dimen/size_10dp"
                android:layout_marginBottom="@dimen/size_10dp"
                android:layout_height="@dimen/size_2dp"/>


            <EditText
                android:id="@+id/edtx_username_00"
                android:textSize="@dimen/size_14sp"
                android:background="@drawable/editext_custom_03"
                android:padding="@dimen/size_5dp"
                android:layout_width="match_parent"
                android:layout_height="@dimen/size_50dp"
                android:inputType="textPersonName"
                android:layout_marginTop="@dimen/size_5dp"
                android:layout_marginBottom="@dimen/size_10dp"
                android:hint="@string/username" />

            <EditText
                android:id="@+id/edtx_password_00"
                android:textSize="@dimen/size_14sp"
                android:background="@drawable/editext_custom_03"
                android:padding="@dimen/size_5dp"
                android:layout_width="match_parent"
                android:layout_height="@dimen/size_50dp"
                android:inputType="textPassword"
                android:layout_marginTop="@dimen/size_5dp"
                android:layout_marginBottom="@dimen/size_10dp"
                android:hint="@string/password" />


            <EditText
                android:id="@+id/edtx_cpassword_00"
                android:textSize="@dimen/size_14sp"
                android:background="@drawable/editext_custom_03"
                android:padding="@dimen/size_5dp"
                android:layout_width="match_parent"
                android:layout_height="@dimen/size_50dp"
                android:inputType="textPassword"
                android:layout_marginTop="@dimen/size_5dp"
                android:layout_marginBottom="@dimen/size_10dp"
                android:hint="@string/confirm_password" />


            <Button
                android:id="@+id/bbtn_action_00"
                android:textColor="@color/white_00"
                android:layout_marginTop="@dimen/size_30dp"
                android:background="@drawable/button_signin"
                android:layout_width="match_parent"
                android:textSize="@dimen/size_16sp"
                android:layout_height="@dimen/size_50dp"
                android:text="@string/register_now" />


        </LinearLayout>
    </ScrollView>
</RelativeLayout>