<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/register_backg_00"
    tools:context=".SignInActivity">

    <RelativeLayout
        android:layout_marginTop="@dimen/size_20dp"
        android:paddingLeft="@dimen/size_20dp"
        android:paddingRight="@dimen/size_20dp"
        android:layout_alignParentTop="true"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <ImageView
            android:id="@+id/imvw_logo_00"
            android:layout_width="@dimen/size_120dp"
            android:layout_height="@dimen/size_120dp"
            app:srcCompat="@drawable/unilever_logo" />
    </RelativeLayout>



    <LinearLayout
        android:id="@+id/lnly_body_00"
        android:layout_above="@+id/rvly_bottom_00"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_centerInParent="true"
        android:layout_marginTop="@dimen/size_20dp"
        android:paddingLeft="@dimen/size_20dp"
        android:paddingRight="@dimen/size_20dp"
        android:layout_marginBottom="@dimen/size_60dp"
        android:orientation="vertical">


        <EditText
            android:id="@+id/edtx_username_00"
            android:textSize="@dimen/size_14sp"
            android:background="@drawable/editext_custom_02"
            android:padding="@dimen/size_5dp"
            android:layout_width="match_parent"
            android:layout_height="@dimen/size_50dp"
            android:inputType="textPersonName"
            android:hint="@string/username" />

        <EditText
            android:id="@+id/edtx_password_00"
            android:textSize="@dimen/size_14sp"
            android:layout_marginTop="@dimen/size_10dp"
            android:background="@drawable/editext_custom_02"
            android:padding="@dimen/size_5dp"
            android:layout_width="match_parent"
            android:layout_height="@dimen/size_50dp"
            android:inputType="textPassword"
            android:hint="@string/password" />

        <Button
            android:id="@+id/bbtn_action_00"
            android:textColor="@color/white_00"
            android:layout_marginTop="@dimen/size_40dp"
            android:background="@drawable/button_signin"
            android:layout_width="match_parent"
            android:textSize="@dimen/size_16sp"
            android:layout_height="@dimen/size_50dp"
            android:text="@string/login_now" />



    </LinearLayout>

    <RelativeLayout
        android:id="@+id/rvly_bottom_00"
        android:background="@color/white_40"
        android:layout_alignParentBottom="true"
        android:layout_width="match_parent"
        android:paddingTop="@dimen/size_10dp"
        android:layout_height="@dimen/size_80dp">


        <LinearLayout
            android:id="@+id/lnly_forgot_00"
            android:orientation="horizontal"
            android:layout_marginTop="@dimen/size_3dp"
            android:gravity="center"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <TextView
                android:id="@+id/txvw_forgot_00"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/forgot_password"
                android:textColor="@color/text_grey"
                android:textSize="@dimen/size_14sp" />

            <TextView
                android:id="@+id/txvw_forgot_01"
                android:layout_width="wrap_content"
                android:layout_marginLeft="@dimen/size_2dp"
                android:layout_height="wrap_content"
                android:text="@string/click_here"
                android:textColor="@color/text_blue"
                android:textSize="@dimen/size_14sp" />

        </LinearLayout>

        <LinearLayout
            android:layout_below="@+id/lnly_forgot_00"
            android:orientation="horizontal"
            android:layout_marginTop="@dimen/size_3dp"
            android:gravity="center"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <TextView
                android:textColor="@color/text_grey"
                android:textSize="@dimen/size_14sp"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/not_member" />

            <TextView
                android:id="@+id/txvw_join_00"
                android:textColor="@color/text_blue"
                android:textSize="@dimen/size_14sp"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="@dimen/size_5dp"
                android:text="@string/join_today" />
        </LinearLayout>
    </RelativeLayout>



</RelativeLayout>