<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/register_backg_00"
    tools:context=".ChangePwdActivity">

    <include
        android:id="@+id/incl_header"
        layout="@layout/header_cart"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content" />

    <RelativeLayout
        android:background="@color/white_40"
        android:layout_marginLeft="@dimen/size_10dp"
        android:layout_marginRight="@dimen/size_10dp"
        android:padding="@dimen/size_10dp"
        android:layout_centerInParent="true"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">


        <EditText
            android:id="@+id/edtx_old_00"
            android:layout_below="@id/textView4"
            android:textSize="@dimen/size_14sp"
            android:background="@drawable/editext_custom_03"
            android:padding="@dimen/size_5dp"
            android:layout_width="match_parent"
            android:layout_height="@dimen/size_50dp"
            android:inputType="textPassword"
            android:layout_marginTop="@dimen/size_5dp"
            android:layout_marginBottom="@dimen/size_10dp"
            android:hint="@string/password" />

        <EditText
            android:id="@+id/edtx_new_00"
            android:layout_below="@id/edtx_old_00"
            android:textSize="@dimen/size_14sp"
            android:background="@drawable/editext_custom_03"
            android:padding="@dimen/size_5dp"
            android:layout_width="match_parent"
            android:layout_height="@dimen/size_50dp"
            android:inputType="textPassword"
            android:layout_marginTop="@dimen/size_5dp"
            android:layout_marginBottom="@dimen/size_10dp"
            android:hint="@string/new_password" />

        <EditText
            android:id="@+id/edtx_confirm_00"
            android:layout_below="@id/edtx_new_00"
            android:textSize="@dimen/size_14sp"
            android:background="@drawable/editext_custom_03"
            android:padding="@dimen/size_5dp"
            android:layout_width="match_parent"
            android:layout_height="@dimen/size_50dp"
            android:inputType="textPassword"
            android:layout_marginTop="@dimen/size_5dp"
            android:layout_marginBottom="@dimen/size_10dp"
            android:hint="@string/confirm_password" />


        <Button
            android:id="@+id/bbtn_action_00"
            android:layout_below="@+id/edtx_confirm_00"
            android:textColor="@color/white_00"
            android:layout_marginTop="@dimen/size_20dp"
            android:background="@drawable/button_signin"
            android:layout_width="match_parent"
            android:textSize="@dimen/size_16sp"
            android:layout_height="@dimen/size_50dp"
            android:text="@string/save" />
    </RelativeLayout>

</RelativeLayout>